apps/uptime-kuma/20-loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.63.201
  selector:
    app: uptime-kuma
  ports:
  - port: 80
    targetPort: http
