apps/uptime-kuma/21-loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-lb
  namespace: uptime-kuma
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.63.202
  selector:
    app: uptime-kuma
  ports:
  - port: 80
    targetPort: http
